# scale-examples

./: .gitignore  .pre-commit-config.yaml  .sourcery.yaml  LICENSE  README.md
.github/: CODEOWNERS  CONTRIBUTING.md
.github/workflows/: adhoc-test.yml  pull-request.yml  schedules-macos-notebooks.yml  schedules-macos-scripts.yml  schedules-ubuntu-notebooks.yml  schedules-ubuntu-scripts.yml  schedules-windows-notebooks.yml  schedules-windows-scripts.yml  test-notebooks.yml  test-scripts.yml
community-code/: README.md
community-code/How_to_Monitor_Diagnose_and_Solve_Gradient_Issues_in_Foundation_Models/: README.md  gradient_norm_tracking_in_pytorch .ipynb  gradient_norm_tracking_in_pytorch.ipynb  requirements.txt
how-to-guides/advanced_quickstart/: neptune_scale_quickstart.ipynb
how-to-guides/debug-model-training-runs/: debug_training_runs.ipynb  setup.py
how-to-guides/e2e-foundation-model-training/: .gitignore  analyze_ablations.ipynb  analyze_runs.ipynb  investigate_datasets_models.ipynb  requirements.txt  run_ablations.py  run_posttraining_dpo.py  run_posttraining_evals.py  run_posttraining_grpo.py  run_posttraining_sft.py  run_pretraining_evals.py  run_pretraining_lighteval_evals.py  (+4 more)
how-to-guides/image-gen-evals/: .gitignore  README.md  analysis.ipynb  checkpoint_utils.py  examples.py  net.py  pyproject.toml  requirements.txt  run_evals.py  run_training.py  torchwatcher.py
how-to-guides/image-gen-evals/image_gen_evals/: eval.py  train.py
how-to-guides/image-gen-evals/image_gen_evals/lib/: checkpoints.py  net.py  script_utils.py  torchwatcher.py
(+73 files in other folders)
