[project]
name = "image-gen-evals"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "diffusers>=0.33",
    "google-genai>=1.30.0",
    "ipykernel>=6.30.1",
    "matplotlib>=3.10",
    "neptune-fetcher>=0.18",
    "neptune-scale>=0.18",
    "numpy>=2.3.0",
    "pynvml>=12.0.0",
    "torch>=2.7",
    "torchvision>=0.22",
    "tqdm>=4.67",
    "typer>=0.16",
]

[project.scripts]
train = "image_gen_evals.train:app"
eval = "image_gen_evals.eval:app"

[tool.ruff]
line-length = 120
